--- a/css/sections/hero.css
+++ b/css/sections/hero.css
@@ -55,7 +55,7 @@
 
 .hero-content-info h1 {
     font-family: var(--playfair-display);
-    font-weight: 600;
+    font-weight: 600px;
     font-size: 80px;
     color: var(--secondary-color);
 }
@@ -114,7 +114,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-    background: var(--white-200);
+    background: var(--color-white);
 }
 
 .hero-content__customer {
@@ -159,5 +159,5 @@
     font-family: var(--plus-jakarta-sans);
     color: var(--secondary-color);
     opacity: 0.8;
-    
+
 }
